# flask-poetry

./: README.md  pyproject.toml
flask_poetry/: app.py
flask_poetry/example/: run-the-app.py
